crash_report.txt
REQUIRE ERROR:
C:\Users\VICTUS\Documents\reign\Nueva carpeta (2)\R-googleReviews.-main\R-googleReviews.-main\backend\server.js:13
const { list } = require('@vercel/blob');
        ^

SyntaxError: Identifier 'list' has already been declared
    at wrapSafe (node:internal/modules/cjs/loader:1662:18)
    at Module._compile (node:internal/modules/cjs/loader:1704:20)
    at Object..js (node:internal/modules/cjs/loader:1895:10)
    at Module.load (node:internal/modules/cjs/loader:1465:32)
    at Function._load (node:internal/modules/cjs/loader:1282:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:235:24)
    at Module.require (node:internal/modules/cjs/loader:1487:12)
    at require (node:internal/modules/helpers:135:16)
    at Object.<anonymous> (C:\Users\VICTUS\Documents\reign\Nueva carpeta (2)\R-googleReviews.-main\R-googleReviews.-main\launcher.js:14:5)